[package]
name = "trait-net"
description = "A collection of traits for client libraries for reducing boilerplate"
license = "MIT"
readme = "README.md"
version = "0.1.0"
authors = ["Alexander Stanovoy <alex.stanovoy@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/trait-net"
homepage = "https://github.com/alexstanovoy/trait-net"
repository = "https://github.com/alexstanovoy/trait-net"
keywords = ["net", "trait", "net", "web", "http", "client", "metrics"]

[dependencies]
async-trait = "0.1"
tokio = { version = "1.32", features = ["time"], optional = true }
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1.32", features = ["net", "time", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[features]
tokio = ["dep:tokio"]
prometheus = ["dep:prometheus"]
