[package]
name = "trait-net"
description = "A collection of traits for client libraries for reducing boilerplate"
license = "MIT"
readme = "README.md"
version = "0.5.0"
authors = ["Alexander Stanovoy <alex.stanovoy@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/trait-net"
homepage = "https://github.com/alexstanovoy/trait-net"
repository = "https://github.com/alexstanovoy/trait-net"
keywords = ["net", "trait", "metrics"]

[dependencies]
tokio = { version = "1.36", features = ["time"] }
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1.36", features = ["net", "time", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[features]
prometheus = ["dep:prometheus"]

[[example]]
name = "http_bin"
path = "examples/http_bin.rs"
